# algorithms-homework-1

./: .gitignore  CMakeLists.txt  README.md  main.cpp  out.csv  split_csv.py
benchmarks/: compare_memory_usage.cpp  compare_operations_count.cpp  compare_sorting.cpp  compare_sorting_time.cpp  count_operations.cpp  plot_memory_results.py  plot_memory_usage_results.py  plot_operations_count_results.py  plot_sorting_comparison.py  plot_sorting_time_results.py  test_memory_usage.cpp
benchmarks/benchmark-results/memory/: 12StudentBase1_memory.csv  12StudentBase2_memory.csv  12StudentBase3_memory.csv
benchmarks/benchmark-results/operations/: 12StudentBase1_results.csv  12StudentBase2_results.csv  12StudentBase3_results.csv
benchmarks/benchmark-results/sorting/: sortBuildIn_results.csv  sortRadix_results.csv
include/: student.h  student_base_1.h  student_base_2.h  student_base_3.h  student_base_abstract.h  student_base_sort.h
src/: student_base_1.cpp  student_base_2.cpp  student_base_3.cpp  student_base_sort.cpp
students-csv-files/: sample_10000.csv  sample_20000.csv  sample_30000.csv  sample_40000.csv
